# ualbertabot

./: .gitignore  CMakeLists.txt  CMakeSettings.json  License.md  README.md
AKBot.CombatSimulation/: CMakeLists.txt  main.cpp
AkBot.Tests/: AK_Config.json  AkBot.Tests.vcxproj  AkBot.Tests.vcxproj.filters  BaseLocationManagerTest.cpp  BotConfigurationTest.cpp  CMakeLists.txt  CommandManagerTest.cpp  Config_WithError.json  ExplorerManagerTest.cpp  GameHelper.cpp  GameHelper.h  MeleeManagerTest.cpp  NullLogger.cpp  NullLogger.h  PlainOpponentView.h  RangedManagerTest.cpp  UnitHelper.cpp  UnitHelper.h  UnitInfoManagerTest.cpp  stdafx.cpp  stdafx.h  unittest1.cpp
AkBot.Tests/Shared/: BulletShared.cpp  ForceShared.cpp  GameShared.cpp  PlayerShared.cpp  RegionShared.cpp  Templates.h  UnitShared.cpp
AkBot.Tests/SupportLib/: BWAPISession.h  GameBuilder.cpp  GameBuilder.h  NullLogger.cpp  UnitHelper.cpp  UnitHelper.h
AkBot.Tests/TestLib/: BulletImpl.cpp  BulletImpl.h  Convenience.h  ForceImpl.cpp  ForceImpl.h  GameImpl.cpp  GameImpl.h  PlayerImpl.cpp  PlayerImpl.h  RegionImpl.cpp  RegionImpl.h  UnitImpl.cpp  UnitImpl.h
AkBot.Tests/basedetection/: ClusterBaseDetectorTest.cpp
BOSS/: .gitignore  BOSS.data  BOSS.html  BOSS.html.mem  BOSS.js  CMakeLists.txt  Makefile  make_windows.bat
BOSS/Qt/: BOSSGUI.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
BOSS/VisualStudio/: BOSS.sln  BOSS.vcxproj  BOSS.vcxproj.filters  BOSS_error_log.txt  BOSS_main.psess  BOSS_main.vcxproj  BOSS_main.vcxproj.filters  BWData.json
BOSS/asset/config/: config.txt  config_deprecated.txt
BOSS/emscripten/: BOSS2.html  config.html  config.txt
BOSS/lib/: SDL_image.lib
BOSS/results/: results.xlsx
BOSS/source/: ActionInProgress.cpp  ActionInProgress.h  ActionSet.cpp  ActionSet.h  ActionType.cpp  ActionType.h  ActionTypeData.cpp  ActionTypeData.h  Array.hpp  BOSS.cpp  BOSS.h  BOSSAssert.cpp  BOSSAssert.h  BOSSException.h  BOSSExperiments.cpp  BOSSExperiments.h  BOSSLogger.cpp  BOSSParameters.cpp  BOSSParameters.h  BOSSPlotBuildOrders.cpp  BOSSPlotBuildOrders.h  BOSSVisExperiment.cpp  BOSSVisExperiment.h  BOSS_main.cpp  BaseTypes.h  BestResponseCombatSearch.cpp  BestResponseCombatSearch.h  BuildOrder.cpp  BuildOrder.h  BuildOrderPlot.cpp  BuildOrderPlot.h  BuildOrderSearchGoal.cpp  BuildOrderSearchGoal.h  BuildOrderTester.cpp  BuildOrderTester.h  BuildingData.cpp  BuildingData.h  CombatSearch.cpp  CombatSearch.h  CombatSearchBucket.cpp  (+65 more)
BOSS/source/CImg/: CImg.h
BOSS/source/bwapidata/: AIModule.cpp  BWAPIDATA.cpp  BWAPIDATA.h  Bitmap.cpp  BulletType.cpp  Color.cpp  Common.cpp  Common.h  DamageType.cpp  Error.cpp  Event.cpp  ExplosionType.cpp  GameType.cpp  Order.cpp  PlayerType.cpp  Position.cpp  Race.cpp  TechType.cpp  TilePosition.cpp  UnitCommandType.cpp  UnitSizeType.cpp  UnitType.cpp  UpgradeType.cpp  WeaponType.cpp
BOSS/source/deprecated/: BOSSAssert.cpp  BOSSVisExperiment.cpp  BOSSVisExperiment.h  GUI.cpp  GUI.h  GUITools.cpp  ThreadCombatSearch.cpp  ThreadCombatSearch.h  TwinSearch.cpp
BOSS/source/rapidjson/: document.h  filestream.h  prettywriter.h  rapidjson.h  reader.h  stringbuffer.h  writer.h
BOSS/source/sdl/: SDL_opengl.h
SparCraft/: .gitignore  CMakeLists.txt  LINUX_HOW_TO_COMPILE.txt  Makefile  README.txt
SparCraft/VisualStudio/: SparCraft.sln  SparCraft.vcxproj  SparCraft.vcxproj.filters  SparCraft_StateVis.vcxproj  SparCraft_Torch.vcxproj  SparCraft_Torch.vcxproj.filters  SparCraft_benchmarks.vcxproj  SparCraft_benchmarks.vcxproj.filters  SparCraft_main.vcxproj  SparCraft_main.vcxproj.filters  bwapidata.vcxproj  bwapidata.vcxproj.filters  set_environment_variables.bat
SparCraft/sample_experiment/: sample_exp.txt  sample_exp_linux.txt  sample_state.txt
SparCraft/source/: AIParameters.cpp  AIParameters.h  AITools.cpp  AITools.h  Action.cpp  Action.h  ActionGenerators.cpp  ActionGenerators.h  AllPlayers.cpp  AllPlayers.h  AlphaBetaMove.cpp  AlphaBetaMove.h  AlphaBetaSearch.cpp  AlphaBetaSearch.h  AlphaBetaSearchParameters.hpp  AlphaBetaSearchResults.hpp  AnimationFrameData.cpp  AnimationFrameData.h  Array.hpp  BOSSAssert.h  BOSSException.cpp  BaseTypes.hpp  Common.cpp  Common.h  Config.cpp  Config.h  ConfigFileGenerator.h  ConfigTools.cpp  ConfigTools.h  Display.cpp  Display.h  EnumData.cpp  EnumData.h  Eval.cpp  Eval.h  GUI.cpp  GUI.h  GUIGame.cpp  GUIGame.h  GUITools.cpp  (+98 more)
UAlbertaBot/: .gitignore  CMakeLists.txt  Charles_Config.txt  UAB_ErrorLog.txt  UAlbertaBot_Config.txt  bwapi.ini
UAlbertaBot/Source/: ArenaManager.cpp  ArenaManager.h  ArenaPlayer.cpp  ArenaPlayer.h  ArenaPlayer_AttackClosest.cpp  ArenaPlayer_AttackClosest.h  ArenaPlayer_SparCraft.cpp  ArenaPlayer_SparCraft.h  AutoObserver.cpp  AutoObserver.h  BOSSManager.cpp  BOSSManager.h  BWAPIHUDInfo.h  BWAPIMapInformation.cpp  BWAPIMapInformation.h  BWAPIOpponentView.cpp  BWAPIOpponentView.h  BWAPIPrintLogger.h  BWAPIReplayOpponentView.cpp  BWAPIReplayOpponentView.h  BWAPIScreenCanvas.cpp  BWAPIScreenCanvas.h  BWAPIUnitInformation.cpp  BWAPIUnitInformation.h  BaseLocation.cpp  BaseLocation.h  BaseLocationManager.cpp  BaseLocationManager.h  BaseLocationManagerDebug.cpp  BaseLocationManagerDebug.h  BotConfiguration.cpp  BotConfiguration.h  BotFactory.cpp  BotFactory.h  BotModule.cpp  BotModule.h  BotPlayer.cpp  BotPlayer.h  BuildOrder.cpp  BuildOrder.h  (+184 more)
UAlbertaBot/VisualStudio/: AKBot.sln  AKBot.vcxproj  AKBot.vcxproj.filters  AKBot_Arena.vcxproj  AKBot_dll.vcxproj  AKBot_exe.vcxproj  AKBot_lib.vcxproj  AkBot.Tests.vcxproj  AkBot.Tests.vcxproj.filters  StarterBot.vcxproj  StarterBot.vcxproj.filters  UAlbertaBot.cd  UAlbertaBot.sln  UAlbertaBot.vcxproj  UAlbertaBot.vcxproj.filters  UAlbertaBot_Arena.vcxproj  UAlbertaBot_Arena.vcxproj.filters  UAlbertaBot_dll.vcxproj  UAlbertaBot_exe.vcxproj  UAlbertaBot_lib.vcxproj  UAlbertaBot_lib.vcxproj.filters
UAlbertaBot/read/: f_Aiur.txt  f_Skynet.txt  f_UAlbertaBot.txt  f_Xelnaga.txt  f_default.txt
UAlbertaBot/starterbot/: Grid.hpp  MapTools.cpp  MapTools.h  StarterBot.cpp  StarterBot.h  Tools.cpp  Tools.h  main.cpp
UAlbertaBot/uml/: Thumbs.db
(+449 files in other folders)
